--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "compression": "^1.7.1",
+    "jquery": "^3.6.1",
     "polka": "next",
+    "rollup-plugin-copy": "^3.4.0",
     "sirv": "^1.0.0"
   },
   "devDependencies": {
