--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "node __sapper__/build"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "bootstrap": "^5.2.1",
     "compression": "^1.7.1",
     "jquery": "^3.6.1",
+    "node-fetch": "^2.6.0",
     "polka": "next",
     "rollup-plugin-copy": "^3.4.0",
     "sirv": "^1.0.0"
